--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@reduxjs/toolkit": "^2.2.7",
     "next": "^14.2.13",
     "react": "^18",
+    "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-redux": "^9.1.2"
   },
