--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "chart.js": "^4.4.4",
     "next": "^14.2.13",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^9.1.3",
     "react-dom": "^18",
     "react-redux": "^9.1.2"
