--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@prisma/client": "^5.20.0",
     "@reduxjs/toolkit": "^2.2.7",
     "chart.js": "^4.4.4",
+    "mongodb": "^6.9.0",
     "next": "^14.2.13",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
