--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.4",
     "mongodb": "^6.9.0",
     "next": "^14.2.13",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^9.1.3",
@@ -28,6 +29,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
